--- a/webui/src/scss/_variables.scss
+++ b/webui/src/scss/_variables.scss
@@ -53,14 +53,17 @@ $header-border: (
 
 $variable-padding: 1px 3px 0px;
 
-$dragging-bg-color: #f5f2fa; //#e8d4ff30;  or var(--cui-primary-bg-subtle), which is similar, but I'm concerned that we've changed primary to red, so not having changed primary-bg-subtle is a bit of an oversight that could be "corrected" in the future.
-@mixin dragging-style() {
+//dragging style works differently for "regular tables" vs. action/feedback lists.
+// Regular tables use the standard HTML drag image, which doesn't appear to be part of the DOM (or even the window)
+// so we use an opaque background for those, since transparency is applied automatically.
+// Action lists use an image that is part of the DOM, so we have to explicitly apply transparency...
+@mixin dragging-style($blur: 1px, $alpha: 1) {
 	// clearly highlight the item being dragged:
-	background-color: #{$dragging-bg-color};
+	background-color: #{rgba(#f5f2fa, $alpha)};
 	box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
 	// outline with negative offset (instead of border) ensures that the other elements aren't affected
 	outline: 2px solid rgba(0, 0, 0, 0.5);
 	outline-offset: -2px;
 	border-radius: 4px;
-	filter: blur(1px);
+	filter: blur($blur);
 }
